--- a/api/config/database.yml
+++ b/api/config/database.yml
@@ -6,7 +6,8 @@ development: &default
   min_messages: warning
   pool: 2
   timeout: 5000
-
+  username: postadmin  
+  password: hello
 development:
   <<: *default
   adapter:  postgresql
